--- a/css/main.css
+++ b/css/main.css
@@ -170,8 +170,31 @@ textarea {
     background-color: #d8d8d8 !important;
 }
 
+.language_selector input {
+    background-color: whitesmoke;
+    border: solid 1px grey;
+    box-shadow: inset grey 0 0 6px 1px;
+    box-sizing: border-box;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    padding: 4px;
+    font-size: 24px;
+    font-weight: bold;
+}
 
+.ls_info {
+    display: inline-block;
+    height: 30px;
+    vertical-align: top;
+    text-align: left;
+    font-size: 18px;
+}
 
+.ls_info .ls_number{
+    font-size: 11px;
+    vertical-align: top;
+}
 
 /* ==========================================================================
    Helper classes
