Display the source article extract and info
Also added: A ground truth definition outside of conditionals to avoid
confuison.

TODO: Disambiguation handling.

--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,10 @@ textarea {
     pointer-events: none;
 }
 
+#section {
+    display: none;
+}
+
 #autocomplete {
     position: absolute;
     background-color: white;
