--- a/css/main.css
+++ b/css/main.css
@@ -179,9 +179,9 @@ textarea {
     border: solid 1px grey;
     box-shadow: inset grey 0 0 6px 1px;
     box-sizing: border-box;
-    width: 40px;
+    /* width: 100px; */
     height: 40px;
-    text-align: center;
+    /* text-align: center; */
     padding: 4px;
     font-size: 24px;
     font-weight: bold;
